# project-Group12

./: .buildinfo  .gitignore  EDA.html  EDA.ipynb  Makefile  README.html  README.md  _config.yml  adoption_days.html  genindex.html  main.html  main.ipynb  modeling.html  modeling.ipynb  objects.inv  outcomes.html  project-description.html  search.html  searchindex.js  setup.cfg
Michelle/: EDA.html
_sources/: EDA.ipynb  README.md  main.ipynb  modeling.ipynb
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
computation_results/: animal_types.pickle  rates_df.pickle  species_outcome.pickle  top_outcome.pickle
sheltertools/: README.html
