# configuration for setup.py


[metadata]
name             = sheltertools
version          = attr: sheltertools.__version__
author           = Ligo Scientific Collaboration (LSC) and Group 12 - Sarah Song, Michelle Lin, Florence Thin
author_email     = sasong@berkeley.edu, lin.michelle@berkeley.edu, kthin3@berkeley.edu
description      = Tools for reading shelters data
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.8,
install_requires =
	numpy
	matplotlib
	ipython
	ipykernel
	decorator
	scipy
    pandas
    scikit-learn
    statsmodels
    catboost

[options.packages.find]
exclude =
    examples*
    docs*